File: minver.c
Original provenience: SNU-RT Benchmark Suite for Worst Case Timing Analysis

2016-02-26:
 - Added TACLeBench header to line 1
 - Rename global variable a to minver_a
 - Rename global variable b to minver_b
 - Rename global variable c to minver_c
 - Rename global variable aa to minver_aa
 - Rename global variable a_i to minver_a_i
 - Rename global variable e to minver_e
 - Rename global variable det to minver_det
 - Renamed function minver to minver_minver
 - Renamed function mmul to minver_mmul
 - Renamed function fabs to minver_fabs
 - Renamed function main to minver_main
 - Created new function main, calling minver_init, minver_main and
   returning minver_return
 - Reordered functions in source code: initialization- and
   return-value-related functions first, followed by algorithm core
   functions, followed by main functions
 - Applied code formatting with astyle as in the example

2016-03-09
 - Removed static keyword from global minver_a array.

2016-05-23
 - Added addition of volatile to test data to avoid constant propagation
 - Added check_sum and comparison with expected value

2016-05-25
 - Initialized variable r in function minver_minver()